@@ -22,13 +22,14 @@ serd (0.31.5) unstable; urgency=medium
   * Improve serdi man page
   * Improve writer error handling
   * Make URI writing stricter by default
+  * Make serd_reader_read_chunk() work with NQuads
   * Override pkg-config dependency within meson
   * Remove support for writing Turtle named inline nodes extension
   * Replace duplicated dox_to_sphinx script with sphinxygen dependency
   * Test header for warnings more strictly
   * Update standard test suites
 
- -- David Robillard <d@drobilla.net>  Sun, 30 Apr 2023 22:24:07 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 03 May 2023 19:48:35 +0000
 
 serd (0.30.16) stable; urgency=medium
 
